@@ -7,7 +7,6 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Component
@@ -20,6 +19,6 @@ public class CidadeDTOAssembler implements DTOAssembler<CidadeDTO, Cidade> {
     }
 
     public List<CidadeDTO> toCollectionDTO(List<Cidade> cidades) {
-        return cidades.stream().map(this::toDTO).collect(Collectors.toList());
+        return cidades.stream().map(this::toDTO).toList();
     }
 }
